Kan kommat åt media och visa det för användaren

--- a/views/media.slim
+++ b/views/media.slim
@@ -1,1 +1,4 @@
-- p = "Media name: #{}"
+p = "Media name: #{media["name"]}"
+p = "Media rating: #{media["total_rating"]}"
+p = "Media type: #{media["type"]}"
+p = "Media creation date: #{media["creation_date"]}"
