Kan nu hämta all information om ett viss medie

--- a/views/media.slim
+++ b/views/media.slim
@@ -2,3 +2,5 @@ p = "Media name: #{media["name"]}"
 p = "Media rating: #{media["total_rating"]}"
 p = "Media type: #{media["type"]}"
 p = "Media creation date: #{media["creation_date"]}"
+p = "Media genre: #{genres}"
+p = "Media author/s: #{authors}"
