--- a/views/media.slim
+++ b/views/media.slim
@@ -1,6 +1,12 @@
+- if !media["picpath"] 
+    - media_pic_path = "/img/default_media_pic.svg"
+- else
+    - media_pic_path = "/img/uploaded_img/media/" + media["picpath"] 
+
+img src=media_pic_path alt="Mediet '#{media["name"]}':s omslagsbild"/
 p = "Media name: #{media["name"]}"
 p = "Media rating: #{media["total_rating"]}"
 p = "Media type: #{media["type"]}"
-p = "Media creation date: #{media["creation_date"]}"
-p = "Media genre: #{genres}"
-p = "Media author/s: #{authors}"
+p = "Media creation date: #{date}"
+p = "Media genre: #{media[:genre_ids]}"
+p = "Media authors: #{author_names}"
