Review data can now be seen by the user

--- a/views/media.slim
+++ b/views/media.slim
@@ -8,5 +8,5 @@ p = "Media name: #{media["name"]}"
 p = "Media rating: #{media["total_rating"]}"
 p = "Media type: #{media["type"]}"
 p = "Media creation date: #{date}"
-p = "Media genre: #{media[:genre_ids]}"
+p = "Media genre: #{genre_names}"
 p = "Media authors: #{author_names}"
