--- a/views/review.slim
+++ b/views/review.slim
@@ -1,4 +1,4 @@
-p = "Author: #{review["user_id"]}"
+p = "Author: #{user_author_name}"
 p = "Rating: #{review["rating"]}"
 p = "Media: #{media_name}"
 p = "Posted: #{date}"
