--- a/views/index.slim
+++ b/views/index.slim
@@ -1,5 +1,5 @@
 - followings_reviews.each do | following_review |
-    p = "Author: #{following_review[:author]}"
-    p = "Rating: #{following_review["rating"]}"
+   // p = "Author: #{following_review[:author]}"
+    p = "Rating: #{following_revies["rating"]}"
     p = "Medium: #{following_review[:media]}"
     p = "Content: #{following_review["content"]}"
