Yardoc och ny navbar

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -8,4 +8,7 @@ html lang="en"
   body
     nav
     h1 IMDJ
+    a href="/login" Logga in
+    a href="/users/new" Skapa ett konto
+    hr
     ==yield
