Att uppdatera medium funkar nu

--- a/views/users/new.slim
+++ b/views/users/new.slim
@@ -1,7 +1,7 @@
 h2 Skapa ett konto 
 
 form action="/users" method="POST"
-    input type="text" name="username" placeholder="Användarnamn"/
-    input type="text" name="password" placeholder="Lösenord"/
-    input type="text" name="password_confirm" placeholder="Skriv in lösenord igen"/
+    input type="text" name="username" placeholder="Användarnamn" required="true"/
+    input type="text" name="password" placeholder="Lösenord" required="true"/
+    input type="text" name="password_confirm" placeholder="Skriv in lösenord igen" required="true"/
     input type="submit" value="Skapa konto"
