--- a/views/users/new.slim
+++ b/views/users/new.slim
@@ -3,5 +3,5 @@ h2 Skapa ett konto
 form action="/users" method="POST"
     input type="text" name="username" placeholder="Användarnamn" required="true"/
     input type="text" name="password" placeholder="Lösenord" required="true"/
-    input type="text" name="password_confirm" placeholder="Skriv in lösenord igen" required="true"/
+    input type="text" name="password_confirmation" placeholder="Skriv in lösenord igen" required="true"/
     input type="submit" value="Skapa konto"
