--- a/views/review/edit.slim
+++ b/views/review/edit.slim
@@ -1,6 +1,6 @@
 /h2 = "Redigera recension om #{media_name} av #{review_author}"
 
-form action="/media/#{media_id}/reviews/#{review["id"]}/edit" method="POST"
+form action="/media/#{media_id}/reviews/#{review["id"]}/update" method="POST"
     input type="number" name="review_rating" min="1" max="5" value="#{review["rating"]}" placeholder="Betyg"
     input type="text" name="review_desc" value="#{review["content"]}" placeholder="Beskrivning"/
     input type="submit" value="Publicera"
