Klar med komplettering

--- a/views/index.slim
+++ b/views/index.slim
@@ -1,5 +1,5 @@
-h2 Aktivitet hos dina följningar:
-- followings_reviews.each do | following_review |
+h2 Hej! Använd navigtionsfältet ovan för att navigera :)
+//- followings_reviews.each do | following_review |
    p = "Author: #{user_ids_to_names(db, [following_review["user_id"]])}"
    p = "Rating: #{following_review["rating"]}"
    p = "Medium: #{media_id_to_name(db, following_review["media_id"])}"
