--- a/views/users/index.slim
+++ b/views/users/index.slim
@@ -6,7 +6,7 @@ h2 Alla användare
         - user_pic_path = "/img/uploaded_img/profile/" + user["picpath"] 
 
     img src=user_pic_path alt="Användare '#{user["name"]}':s profilbild"/
-    p = "User name: #{user["name"]}"
+    a href="/users/#{user["id"]}" User name: #{user["name"]} 
     p = "User type: #{user["type"]}"
     p = "Following: #{user_ids_to_names(db, user[:following_ids])} (#{user[:following_ids].length})"
     p = "Joined: #{format_unix_timestamp(user["creation_date"])}"
